examples: add code review and research agent demonstrations
Add examples/04_code_review.py and examples/05_research_agent.py to
complete the examples suite.

## Example 04: Code Review Agent

**What it demonstrates:**
- Automated code quality analysis (bugs, security, performance)
- Security vulnerability scanning (OWASP-focused)
- Code smell and anti-pattern detection
- Refactoring suggestions with before/after examples
- Comprehensive review report generation

**Structure (5 review types):**
1. Single file analysis - Detailed review with severity ratings
2. Multi-file analysis - Quality comparison across files
3. Security audit - Vulnerability scan with risk levels
4. Refactoring suggestions - Actionable improvements
5. Comprehensive report - Full markdown report with action items

**Sample code included:**
- examples/sample_code/calculator.py - Bugs, performance issues, style
- examples/sample_code/data_processor.py - Security vulnerabilities

## Example 05: Research Agent

**What it demonstrates:**
- Automated web research and information gathering
- Multi-source synthesis and cross-referencing
- Comparative analysis across topics
- Fact-checking with confidence levels
- Literature reviews
- Comprehensive research report generation

**Structure (6 research types):**
1. Simple research - Basic topic investigation
2. Comparative analysis - GraphQL vs REST comparison
3. Multi-source investigation - Complex topic breakdown
4. Fact-checking - Claim verification with verdicts
5. Literature review - Academic-style synthesis
6. Comprehensive report - Full cited research report

Both examples demonstrate practical, real-world use cases that showcase
harombe's ability to automate knowledge work that would normally take
hours of manual effort.

Updated examples/README.md and .pre-commit-config.yaml (exclude sample_code).

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,8 +10,10 @@ repos:
       # Run the linter
       - id: ruff
         args: [--fix]
+        exclude: ^examples/sample_code/
       # Run the formatter
       - id: ruff-format
+        exclude: ^examples/sample_code/
 
   # Mypy - Type checking
   - repo: https://github.com/pre-commit/mirrors-mypy
